--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.13.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@rollup/rollup-win32-x64-msvc": "^4.46.1",
     "@tailwindcss/vite": "^4.1.11",
