--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   },
   "dependencies": {
     "@google/genai": "^1.13.0",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-oauth/google": "^0.12.2",
     "@rollup/rollup-win32-x64-msvc": "^4.46.1",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.534.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-google-places-autocomplete": "^4.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
