--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_GOOGLE_PLACE_API_KEY=AIzaSyB68HqUD_YOEY0kz2A1ImwoyvAb4F4aP7Y
 
 VITE_GOOGLE_GEMINI_AI_API_KEY=AIzaSyBB1Aosj-4TDcAEiRvoAfdwUE7FbfV0dSE
+VITE_GOOGLE_AUTH_CLIENT_ID=1088292857419-8akgl96qieoa763u16vlmb54tlq1pe15.apps.googleusercontent.com 
