--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "globals": "^16.3.0",
     "tw-animate-css": "^1.3.6",
     "vite": "^7.0.4"
+  },
+  "overrides": {
+    "@rollup/rollup-win32-x64-msvc": "@rollup/rollup@4.46.1"
   }
 }
